# haskellService

./: DB.sql  Main.hs  Main.hs~  my-project.cabal  my-project.cabal~
.stack-work/install/x86_64-linux/lts-7.4/8.0.1/flag-cache/: HDBC-2.4.0.1-4RVX8kLUuxOI95AL10vhvV  HUnit-1.3.1.2-LggooYwT1UPHSoNYWvAdgk  QuickCheck-2.8.2-B7cXgOk7OAiKrNRsk2SfuA  aeson-0.11.2.1-5ZQWuTFmffALcfpzDCXoOz  aeson-compat-0.3.6-5wE6V2cyaFcB5no9HXBKW5  aeson-pretty-0.8.2-FONEppYcAcNL67yNmD5AQ1  aeson-qq-0.8.1-EhY8eASxrpO2i59iUuGlRw  ansi-terminal-0.6.2.3-448ipfN5j28Ha0AgPiJmdI  appar-0.1.4-1in4Ewd8JBkAYDZSWXLSe0  async-2.1.0-J6Pl8k3L4PKGEpjYdgwiIf  attoparsec-0.13.1.0-5Olk1S76r1CDYzFS6V3sZR  auto-update-0.1.4-GAesfFmqoZzBz6e09kRyzb  base-compat-0.9.1-tmPpmtbHbvIDjFWbkjGrR  base64-bytestring-1.0.0.1-In9M41tLtcS9QYt3QpGpNY  blaze-builder-0.4.0.2-KWDLbdBYSBoALiMW0LHIz1  blaze-html-0.8.1.2-2kD96kJB6JEGow1dP8IL6C  blaze-markup-0.7.1.0-5a5pBG0fO8kJX4ke3K7j3D  byteorder-1.0.4-BbL4c17EpZrL9PcZm0xys9  bytestring-builder-0.10.8.1.0-4GkSrJiY0n01lBdCh7onK  case-insensitive-1.2.0.7-FlqweN7AuKj9EdU2arVEt4  cmdargs-0.10.14-8WOlFWoK1XlCebTZE2edgd  conduit-1.2.8-26yreGsdcSzh1pqnBzLwi  conduit-extra-1.1.13.3-AHdJvsGZafy29Xve8J7q8a  convertible-1.1.1.0-LKSEHOqRPBWL4CrSDoQYvh  cookie-0.4.2.1-2a2c54yIyBn79Ul3iLWclJ  cpphs-1.20.2-GpD5nXqQjzpAbSUhSdFgEv  data-default-class-0.1.2.0-FYQpjIylblBDctdkHAFeXA  dlist-0.8.0.2-GWAMmbX9rLg3tqrbOizHGv  easy-file-0.2.1-bAUkz2rC2kFhBbPjw2Of5  exceptions-0.8.3-7py7fmRxowDFpHmiHGKrTb  fail-4.9.0.0-FGE8TmYPyfd2ZUpoMVx9sD  fast-logger-2.4.7-E7H6TuZQzia59KuB50vayl  (+85 more)
app/: Main.hs~
(+1 files in other folders)
